force-app/main/default/objects/Event_Option__c/Event_Option__c.object-meta.xml
<CustomObject>
    <label>Event Option</label>
    <nameField>
        <label>Event Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>