force-app/main/default/objects/Event_Option__c/fields/Option_Text__c.field-meta.xml
<CustomField>
    <fullName>Option_Text__c</fullName>
    <label>Option Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>