force-app/main/default/objects/Event_Option__c/fields/Votes_Count__c.field-meta.xml
<CustomField>
    <fullName>Votes_Count__c</fullName>
    <label>Votes Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>